--- a/Geral/web.config
+++ b/Geral/web.config
@@ -24,6 +24,10 @@
                     <match url="^financeiro$" />
                     <action type="Rewrite" url="financeiro.php" />
                 </rule>
+				<rule name="Home" stopProcessing="true">
+                    <match url="^home$" />
+                    <action type="Rewrite" url="home.php" />
+                </rule>
                 <rule name="Logisitica" stopProcessing="true">
                     <match url="^logistica$" />
                     <action type="Rewrite" url="comercial.php" />
