--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: Inovação intranet
+title: Editora Inovação intranet
 description: 🚢 👥 General intranet of Inovação
